fixing issue with align of icons

--- a/knowage/src/main/webapp/themes/commons/css/SASS/_fonts.scss
+++ b/knowage/src/main/webapp/themes/commons/css/SASS/_fonts.scss
@@ -232,3 +232,48 @@
 .ai-resistor:before {
   content: "\78";
 }
+
+@font-face {
+  font-family: "knowage";
+  src:url("../fonts/knowage/knowage.eot");
+  src:url("../fonts/knowage/knowage.eot?#iefix") format("embedded-opentype"),
+    url("../fonts/knowage/knowage.woff") format("woff"),
+    url("../fonts/knowage/knowage.ttf") format("truetype"),
+    url("../fonts/knowage/knowage.svg#knowage") format("svg");
+  font-weight: normal;
+  font-style: normal;
+
+}
+
+[data-icon]:before {
+  font-family: "knowage" !important;
+  content: attr(data-icon);
+  font-style: normal !important;
+  font-weight: normal !important;
+  font-variant: normal !important;
+  text-transform: none !important;
+  speak: none;
+  line-height: 1;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+[class^="kni-"]:before,
+[class*=" kni-"]:before {
+  font-family: "knowage" !important;
+  font-style: normal !important;
+  font-weight: normal !important;
+  font-variant: normal !important;
+  text-transform: none !important;
+  speak: none;
+  line-height: 1;
+  
+  font-size: 1rem;
+  line-height: 1rem;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.kni-sum:before {
+  content: "\61";
+}
