--- a/knowage/src/main/webapp/themes/commons/css/SASS/components/_qbeEngine.scss
+++ b/knowage/src/main/webapp/themes/commons/css/SASS/components/_qbeEngine.scss
@@ -306,6 +306,10 @@
                 
             }
         }
+		.md-label {
+			position:releative; 
+			right:-12px;
+		}
     }
     .qbeCustomTable {
         padding: 4px; 
